--- a/html/index.html
+++ b/html/index.html
@@ -20,8 +20,10 @@
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
+  <link rel="stylesheet" href="css/lobster-two-fontfacekit/stylesheet.css">
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/site.css">
   
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
@@ -38,19 +40,40 @@
     <a href="#nav">skip to navigation</a>
     <a href="#content">skip to content</a>
   </div>
-  <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
-       chromium.org/developers/how-tos/chrome-frame-getting-started -->
-  <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
-  <header>
-
-  </header>
-  <div role="main">
-
-  </div>
-  <footer>
-
-  </footer>
-
+  <div id="page" class="rel col1 overflow">
+    <header class="rel col1 ">
+      <div id="headerContainer" class="rel container center">
+        <div id="logo" class="abs"><h1>GardenMate</h1></div>
+        <nav class="abs z1">
+          <a name="nav"></a>
+          <ul id="navigation" class="inline pad-side">
+            <li class="" slug="visit">Visit</li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div id="main" role="main" class="rel container center">
+      <a name="content"></a>
+      <section id="content" class="rel w900">
+          <span class="rel h1"><img src="img/spacer.gif" height="1" width="900" /></span>
+          <h2>Yo!</h2>
+          <p>Stuff yo yo yo</p>
+      </section> 
+      <section id="sidebar" class="rel w300">
+          <span class="rel h1"><img src="img/spacer.gif" height="1" width="300" /></span>
+          
+          <p>Sidebar</p>
+          
+      </section>
+    </div>
+    <footer class="rel w100 wrap-up-70">
+      <div id="footerContainer" class="rel container center">
+            <div id="flogo" class="abs">
+                <h1>Garden Mate</h1>
+            </div>
+      </div>
+    </footer>
+  </div> 
 
   <!-- JavaScript at the bottom for fast page loading -->
 
