--- a/html/index.html
+++ b/html/index.html
@@ -43,11 +43,21 @@
   <div id="page" class="rel col1 overflow">
     <header class="rel col1 ">
       <div id="headerContainer" class="rel container center">
-        <div id="logo" class="abs"><h1>GardenMate</h1></div>
+        <div id="logo" class="abs">
+          <h1>Garden<span>Mate</span></h1>
+        </div>
+        <div id="subtitle" class="abs">
+          Find a Community Garden
+        </div>
+        
         <nav class="abs z1">
           <a name="nav"></a>
           <ul id="navigation" class="inline pad-side">
-            <li class="" slug="visit">Visit</li>
+            <li class="" slug="">Home</li>
+            <li class="" slug="">About Us</li>
+            <li class="" slug="">Host a Garden</li>
+            <li class="" slug="">Find a Garden</li>
+            <li class="" slug="">Login</li>
           </ul>
         </nav>
       </div>
@@ -56,8 +66,8 @@
       <a name="content"></a>
       <section id="content" class="rel w900">
           <span class="rel h1"><img src="img/spacer.gif" height="1" width="900" /></span>
-          <h2>Yo!</h2>
-          <p>Stuff yo yo yo</p>
+          <h1>Find a Garden</h1>
+          <p class="em">Community Gardens are privately owned ...</p>
       </section> 
       <section id="sidebar" class="rel w300">
           <span class="rel h1"><img src="img/spacer.gif" height="1" width="300" /></span>
